--- a/src/views/site/changePassword.hbs
+++ b/src/views/site/changePassword.hbs
@@ -1,29 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 {{> head}}
+<style>
+    main {
+        background-color: rgb(238, 238, 238);
+        padding: 0 14%;
+        min-height: 100vh;
+        overflow: hidden;
+    }
+    .changePassword-container {
+        background-color: white;
+        box-shadow: 0 8px 10px 6px rgb(228, 228, 228);
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        min-width: 500px;
+    }
+    .link-cancel {
+        text-decoration: none;
+        margin-left: 15px;
+    }
+    .link-cancel:hover {
+        text-decoration: underline;
+    }
+    label {
+        cursor: pointer;
+        color: rgb(44, 44, 44);
+        font-weight: 500;
+    }
+</style>
 <body>
-    <div class="container">
-        <a href="/{{removeSpace user.name}}" class="btn btn-link fs-5">
-            <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
-        </a>
-        <form action="/{{removeSpace user.name}}/store_password" method="POST">
-            <div class="mb-3">
-                <label for="currentP" class="form-label">Current Password</label>
-                <input type="password" class="form-control" id="currentP" name="currentP" placeholder="Your current password..." required>
-                <span>{{msg2}}</span>
+    <main>
+        <div class="changePassword-container">
+            <div class="text-center" style="border-bottom: 1px solid rgb(192, 192, 192);">
+                <img src="/images/header/logo.png" alt="" width="250px">
             </div>
-            <div class="mb-3">
-                <label for="newP" class="form-label">New Password</label>
-                <input type="password" class="form-control" id="newP" name="newP" placeholder="Your new password..." required minlength="6">
-                <span>{{msg}}</span>
+            <div style="width: 50%; min-width: 475px; padding: 40px;">
+                <span class="fs-2" style="display: block; color: rgb(94, 94, 94);">
+                    Change password
+                </span>
+                <div class="mt-5">
+                    <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
+                        User ID
+                    </span>
+                    <span style="display: block;">{{user.email}}</span>
+                </div>
+                
+                <form class="mt-4" action="/{{removeSpace user.name}}/store_password" method="POST">
+                    <div class="mb-3">
+                        <label for="oldP" class="form-label">Old password</label>
+                        <input type="password" class="form-control" id="oldP" name="oldP" placeholder="" required>
+                        <span>{{msg}}</span>
+                    </div>
+                    <div class="mb-3">
+                        <label for="newP" class="form-label">Create new password</label>
+                        <input type="password" class="form-control" id="newP" name="newP" placeholder="" required minlength="6">
+                        <span>{{msg2}}</span>
+                    </div>
+                    <div class="mb-3">
+                        <label for="confirmNP" class="form-label">Confirm new password</label>
+                        <input type="password" class="form-control" id="confirmNP" name="confirmNP" placeholder="" required minlength="6">
+                        <span>{{msg}}</span>
+                    </div>
+                    <div class="mt-5">
+                        <button type="submit" class="btn btn-primary">Change</button>
+                        <a class="link-cancel" href="/{{removeSpace user.name}}">Cancel</a>
+                    </div>
+                </form>
             </div>
-            <div class="mb-3">
-                <label for="confirmNP" class="form-label">Confirm New Password</label>
-                <input type="password" class="form-control" id="confirmNP" name="confirmNP" placeholder="Confirm your new password..." required minlength="6">
-                <span>{{msg}}</span>
-            </div>
-            <button type="submit" class="btn btn-primary">Change</button>
-        </form>
-    </div>
+        </div>
+    </main>
 </body>
 </html>
