update change password

--- a/src/views/site/changePassword.hbs
+++ b/src/views/site/changePassword.hbs
@@ -32,9 +32,11 @@
     <main>
         <div class="changePassword-container">
             <div class="text-center" style="border-bottom: 1px solid rgb(192, 192, 192);">
-                <img src="/images/header/logo.png" alt="" width="250px">
+                <a href="/{{user.role}}">
+                    <img src="/images/header/logo.png" alt="" width="220px">
+                </a>
             </div>
-            <div style="width: 50%; min-width: 475px; padding: 40px;">
+            <div style="width: 50%; min-width: 475px; padding: 30px 50px;">
                 <span class="fs-2" style="display: block; color: rgb(94, 94, 94);">
                     Change password
                 </span>
@@ -49,17 +51,18 @@
                     <div class="mb-3">
                         <label for="oldP" class="form-label">Old password</label>
                         <input type="password" class="form-control" id="oldP" name="oldP" placeholder="" required>
-                        <span>{{msg}}</span>
+                        <span class="msg">{{msg}}</span>
                     </div>
                     <div class="mb-3">
                         <label for="newP" class="form-label">Create new password</label>
                         <input type="password" class="form-control" id="newP" name="newP" placeholder="" required minlength="6">
-                        <span>{{msg2}}</span>
+                        <span class="msg">{{msg2}}</span>
                     </div>
                     <div class="mb-3">
                         <label for="confirmNP" class="form-label">Confirm new password</label>
                         <input type="password" class="form-control" id="confirmNP" name="confirmNP" placeholder="" required minlength="6">
-                        <span>{{msg}}</span>
+                        <span class="msg">{{msg3.s1}}</span>
+                        <span class="msg">{{msg3.s2}}</span>
                     </div>
                     <div class="mt-5">
                         <button type="submit" class="btn btn-primary">Change</button>
