--- a/src/views/admin/editAdmin.hbs
+++ b/src/views/admin/editAdmin.hbs
@@ -63,6 +63,10 @@
         </form>
     </main>
 
-{{> bottom}}
+    <script>
+        previewImageAndClose();
+    </script>
+
+{{> frameworkCDN}}
 </body>
 </html>
