--- a/src/views/admin/editStaff.hbs
+++ b/src/views/admin/editStaff.hbs
@@ -45,6 +45,10 @@
         </form>
     </main>
 
-{{> bottom}}
+    <script>
+        previewImageAndClose();
+    </script>
+
+{{> frameworkCDN}}
 </body>
 </html>
