--- a/src/views/admin/editTrainer.hbs
+++ b/src/views/admin/editTrainer.hbs
@@ -49,6 +49,10 @@
         </form>
     </main>
 
-{{> bottom}}
+    <script>
+        previewImageAndClose();
+    </script>
+
+{{> frameworkCDN}}
 </body>
 </html>
