--- a/src/views/admin/profile.hbs
+++ b/src/views/admin/profile.hbs
@@ -15,6 +15,6 @@
         <a href="/{{removeSpace user.name}}/change_password" class="btn btn-link">Change Password</a>
     </main>
 
-{{> bottom}}
+{{> frameworkCDN}}
 </body>
 </html>
