--- a/src/views/admin/admin-accounts.hbs
+++ b/src/views/admin/admin-accounts.hbs
@@ -4,7 +4,7 @@
 <body>
     {{> adminLayout}}
 
-    <main class="content-detail" id="">
+    <main class="content-detail" id="content-detail">
         <h3 class="fs-4 mt-5">Accounts (~ {{total}} records)</h3>
         <div class="content-detail-header mt-4">
             <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Account</button>
@@ -53,7 +53,7 @@
                                     <i class="bi bi-pencil-square"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Edit</span>
                                 </a>
-                                <a href="/admin/admin-accounts/delete?id={{this._id}}" class="btn btn-danger" style="border-bottom-right-radius: unset;">
+                                <a href="" class="btn btn-danger" style="border-bottom-right-radius: unset;" data-bs-toggle="modal" data-id="{{this._id}}" data-bs-target="#delete-item-modal">
                                     <i class="bi bi-x-lg"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Delete</span>
                                 </a>
@@ -157,6 +157,34 @@
         </div>
     </div> --}}
 
-{{> bottom}}
+    <div class="modal fade" id="delete-item-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Delete</h5>
+                <i class="bi bi-exclamation-triangle fs-3" style="color: red; margin-left: 10px;"></i>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this account?
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="btn-delete-item" class="btn btn-danger">Delete</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            </div>
+            </div>
+        </div>
+    </div>
+    <form name="delete-item-form" action="/admin/admin-accounts/delete">
+        <input type="hidden" name="id" value="">
+    </form>
+
+    <script>
+        activateModalAddingForm();
+        previewImage();
+        confirmItemDeletion();
+    </script>
+
+{{> frameworkCDN}}
 </body>
 </html>
