--- a/src/views/partials/head.hbs
+++ b/src/views/partials/head.hbs
@@ -6,5 +6,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/b630979aa8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/app.css">
+    <script type="text/javascript" src="/js/app.js"></script>
     <title>FPT Education</title>  
 </head>
