--- a/src/views/admin/staff-accounts.hbs
+++ b/src/views/admin/staff-accounts.hbs
@@ -52,7 +52,7 @@
                                     <i class="bi bi-pencil-square"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Edit</span>
                                 </a>
-                                <a href="/admin/staff-accounts/delete?id={{this._id}}" class="btn btn-danger" style="border-bottom-right-radius: unset;">
+                                <a href="" class="btn btn-danger"style="border-bottom-right-radius: unset;" data-bs-toggle="modal" data-id="{{this._id}}" data-bs-target="#delete-item-modal">
                                     <i class="bi bi-x-lg"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Delete</span>
                                 </a>
@@ -118,6 +118,28 @@
         </div>
     </div>
     
+    <div class="modal fade" id="delete-item-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Delete</h5>
+                    <i class="bi bi-exclamation-triangle fs-3" style="color: red; margin-left: 10px;"></i>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this account?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="btn-delete-item" class="btn btn-danger">Delete</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <form name="delete-item-form" action="/admin/staff-accounts/delete">
+        <input type="hidden" name="id" value="">
+    </form>
+
     <script>
         activateModalAddingForm();
         previewImage();
