--- a/src/views/admin/editAdmin.hbs
+++ b/src/views/admin/editAdmin.hbs
@@ -8,7 +8,7 @@
         <a href="/admin/admin-accounts" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" action="/admin/admin-accounts/update?id={{admin._id}}" enctype="multipart/form-data">
+        <form class="row g-3 mt-4" method="POST" action="/admin/admin-accounts/update?id={{admin._id}}" enctype="multipart/form-data" onsubmit="return validateAdminAcc();">
             <div class="text-left">
                 <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{admin.image.contentType}};base64,{{convertImage admin.image.data}}" alt="" class="img-thumbnail">
                 <div class="chosen_image-container">
@@ -19,14 +19,15 @@
             <div class="col-12 mt-4 mb-3">
                 <label class="input-group-text" style="cursor: pointer;" for="btn-upload-img">Upload</label>
             </div>
-
             <div class="col-12">
                 <label for="email" class="form-label">Email Address</label>
-                <input type="email" class="form-control" id="email" name="email" value="{{admin.email}}" required placeholder="Your email address...">
+                <input type="email" class="form-control" id="email" name="email" value="{{admin.email}}" minlength="12" maxlength="40" required placeholder="Your email address...">
+                <span class="msg" id="email-msg"></span>
             </div>
             <div class="col-12">
                 <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{admin.name}}" required placeholder="Your full name...">
+                <input type="text" class="form-control" id="name" name="name" value="{{admin.name}}" required placeholder="Your full name..." minlength="5" maxlength="30">
+                <span class="msg" id="name-msg"></span>
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
@@ -50,7 +51,8 @@
             </div> --}}
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address...">{{admin.address}}</textarea>
+                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address..." minlength="6" maxlength="100">{{admin.address}}</textarea>
+                <span class="msg" id="address-msg"></span>
             </div>
             {{!-- <div class="input-group mt-4 mb-3"> --}}
                 <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
