validate data for accounts

--- a/src/views/admin/admin-accounts.hbs
+++ b/src/views/admin/admin-accounts.hbs
@@ -87,7 +87,7 @@
                 <div>
                     <label for="email" class="form-label">Email address</label>
                     <input type="email" class="form-control" name="email" id="email" placeholder="Your email address..." minlength="12" maxlength="40" required>
-                    <span class="msg" id="email-msg"></span>
+                    <span class="msg" id="email-msg">{{msg}}</span>
                 </div>
                 <div>
                     <label for="name" class="form-label">Full name</label>
