--- a/src/views/site/changePassword.hbs
+++ b/src/views/site/changePassword.hbs
@@ -14,6 +14,7 @@
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         min-width: 500px;
+        min-height: 91vh;
     }
     .link-cancel {
         text-decoration: none;
@@ -33,36 +34,37 @@
         <div class="changePassword-container">
             <div class="text-center" style="border-bottom: 1px solid rgb(192, 192, 192);">
                 <a href="/{{user.role}}">
-                    <img src="/images/header/logo.png" alt="" width="220px">
+                    <img src="/images/header/logo.png" alt="" width="150px">
                 </a>
             </div>
-            <div style="width: 50%; min-width: 475px; padding: 30px 50px;">
+            <div style="width: 50%; min-width: 475px; padding: 12px 50px;">
                 <span class="fs-2" style="display: block; color: rgb(94, 94, 94);">
                     Change password
                 </span>
-                <div class="mt-5">
+                <p style="font-size: 0.8rem; color: rgb(97, 97, 97);" class="mt-2">Strong password required. Enter 8-30 characters. Do not include common words or names. Combine uppercase letters, lowercase letters, numbers, and symbols.</p>
+                <div class="mt-4">
                     <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
                         User ID
                     </span>
                     <span style="display: block;">{{user.email}}</span>
                 </div>
                 
-                <form class="mt-4" action="/{{removeSpace user.name}}/store_password" method="POST">
+                <form class="mt-4" action="/{{removeSpace user.name}}/store_password" method="POST" onsubmit="return validatePassword();">
                     <div class="mb-3">
                         <label for="oldP" class="form-label">Old password</label>
                         <input type="password" class="form-control" id="oldP" name="oldP" placeholder="" required>
-                        <span class="msg">{{msg}}</span>
+                        <span class="msg" id="oldP-msg">{{msg}}</span>
                     </div>
                     <div class="mb-3">
                         <label for="newP" class="form-label">Create new password</label>
-                        <input type="password" class="form-control" id="newP" name="newP" placeholder="" required minlength="8">
-                        <span class="msg">{{msg2}}</span>
+                        <input type="password" class="form-control" id="newP" name="newP" placeholder="" required minlength="8" maxlength="30">
+                        <span class="msg" id="newP-msg"></span>
                     </div>
                     <div class="mb-3">
                         <label for="confirmNP" class="form-label">Confirm new password</label>
-                        <input type="password" class="form-control" id="confirmNP" name="confirmNP" placeholder="" required minlength="8">
-                        <span class="msg">{{msg3.s1}}</span>
-                        <span class="msg">{{msg3.s2}}</span>
+                        <input type="password" class="form-control" id="confirmNP" name="confirmNP" placeholder="" required minlength="8" maxlength="30">
+                        <span class="msg" id="confirmNP-msg"></span>
+                        <span class="msg" id="confirmNP-msg2"></span>
                     </div>
                     <div class="mt-5">
                         <button type="submit" class="btn btn-primary">Change</button>
