--- a/src/views/admin/editTrainer.hbs
+++ b/src/views/admin/editTrainer.hbs
@@ -8,7 +8,7 @@
         <a href="/admin/trainer-accounts" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" action="/admin/trainer-accounts/update?id={{trainer._id}}" enctype="multipart/form-data">
+        <form class="row g-3 mt-4" method="POST" action="/admin/trainer-accounts/update?id={{trainer._id}}" enctype="multipart/form-data" onsubmit="return validateTrainerAcc();">
             <div class="text-left">
                 <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{trainer.image.contentType}};base64,{{convertImage trainer.image.data}}" alt="" class="img-thumbnail">
                 <div class="chosen_image-container">
@@ -22,15 +22,18 @@
 
             <div class="col-12">
                 <label for="email" class="form-label">Email Address</label>
-                <input type="email" class="form-control" id="email" name="email" value="{{trainer.email}}" required placeholder="Your email address...">
+                <input type="email" class="form-control" id="email" name="email" value="{{trainer.email}}" required placeholder="Your email address..." minlength="12" maxlength="40">
+                <span class="msg" id="email-msg"></span>
             </div>
             <div class="col-12">
                 <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{trainer.name}}" required placeholder="Your full name...">
+                <input type="text" class="form-control" id="name" name="name" value="{{trainer.name}}" required placeholder="Your full name..." minlength="5" maxlength="30">
+                <span class="msg" id="name-msg"></span>
             </div>
             <div class="col-12">
                 <label for="specialty" class="form-label">Specialty</label>
-                <input type="text" class="form-control" id="specialty" name="specialty" value="{{trainer.specialty}}" required placeholder="Your specialty...">
+                <input type="text" class="form-control" id="specialty" name="specialty" value="{{trainer.specialty}}" required placeholder="Your specialty..." minlength="2" maxlength="20">
+                <span class="msg" id="specialty-msg"></span>
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
@@ -38,7 +41,8 @@
             </div>
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address...">{{trainer.address}}</textarea>
+                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address..." minlength="6" maxlength="100">{{trainer.address}}</textarea>
+                <span class="msg" id="address-msg"></span>
             </div>
                 <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
             <div class="col-12 mt-5">
