--- a/src/views/admin/trainer-accounts.hbs
+++ b/src/views/admin/trainer-accounts.hbs
@@ -76,7 +76,7 @@
         {{/if}}
     </main>
 
-    <div class="modal-action_form js-modal-adding_form">
+    <div class="modal-action_form js-modal-adding_form" style="{{attr}}">
         <div class="modal-action_form-container js-modal-action_form-container">
             <div class="modal-action_form-close js-modal-action_form-close"><i class="bi bi-x-lg"></i></div>
             <header class="modal-action_form-header">
@@ -84,18 +84,21 @@
                 New Account
             </header>
             
-            <form class="modal-action_form-body" method="POST" action="/admin/trainer-accounts/store" enctype="multipart/form-data">
+            <form class="modal-action_form-body" method="POST" action="/admin/trainer-accounts/store" enctype="multipart/form-data" onsubmit="return validateTrainerAcc();">
                 <div>
                     <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your email..." required>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your email..." minlength="12" maxlength="40" required>
+                    <span class="msg" id="email-msg">{{msg}}</span>
                 </div>
                 <div>
                     <label for="name" class="form-label">Full name</label>
-                    <input type="text" class="form-control" name="name" id="name" placeholder="Your full name..." required>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Your full name..." minlength="5" maxlength="30" required>
+                    <span class="msg" id="name-msg"></span>
                 </div>
                 <div>
                     <label for="address" class="">Address</label>
-                    <textarea type="text" class="form-control" name="address" id="address" placeholder="Your address..." required></textarea>
+                    <textarea type="text" class="form-control" name="address" id="address" placeholder="Your address..." minlength="6" maxlength="100" required></textarea>
+                    <span class="msg" id="address-msg"></span>
                 </div>
                 <div>   
                     <label for="dob" class="">Date of birth</label>
@@ -103,7 +106,8 @@
                 </div>
                 <div>   
                     <label for="specialty" class="">Specialty</label>
-                    <input type="text" class="form-control" name="specialty" id="specialty" required placeholder="Your specialty...">
+                    <input type="text" class="form-control" name="specialty" id="specialty" required placeholder="Your specialty..." minlength="2" maxlength="20">
+                    <span class="msg" id="specialty-msg"></span>
                 </div>
                 <div>
                     <label for="btn-add-img" class="form-label">Upload</label>
@@ -119,7 +123,8 @@
             </form>
 
             <footer class="modal-action_form-footer">
-                <p style="margin-bottom: 6px;">Need <a href="#">help?</a></p>
+                <a href="/admin/trainer-accounts" class="cancel">Cancel</a>
+                Need <a href="#">help?</a>
             </footer>
         </div>
     </div>
