--- a/src/views/staff/trainee-accounts.hbs
+++ b/src/views/staff/trainee-accounts.hbs
@@ -81,23 +81,27 @@
             <form class="modal-action_form-body" method="POST" action="/staff/trainee-accounts/store" enctype="multipart/form-data">
                 <div>
                     <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your email..." required>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your email..." minlength="12" maxlength="40" required>
                 </div>
                 <div>
                     <label for="name" class="form-label">Full name</label>
-                    <input type="text" class="form-control" name="name" id="name" placeholder="Your full name..." required>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Your full name..." minlength="5" maxlength="30" required>
+                </div>
+                <div>
+                    <label for="code" class="form-label">Code</label>
+                    <input type="text" class="form-control" name="code" id="code" placeholder="Your code..." minlength="4" maxlength="20" required>
+                </div>
+                <div>   
+                    <label for="education" class="">Education</label>
+                    <input type="text" class="form-control" name="education" id="education" required placeholder="Your education..." minlength="2" maxlength="20">
                 </div>
                 <div>
                     <label for="address" class="">Address</label>
-                    <textarea type="text" class="form-control" name="address" id="address" placeholder="Your address..." required></textarea>
+                    <textarea type="text" class="form-control" name="address" id="address" placeholder="Your address..." required minlength="6" maxlength="100"></textarea>
                 </div>
                 <div>   
                     <label for="dob" class="">Date of birth</label>
                     <input type="date" class="form-control" name="dob" id="dob" required>
-                </div>
-                <div>   
-                    <label for="education" class="">Education</label>
-                    <input type="text" class="form-control" name="education" id="education" required placeholder="Your education...">
                 </div>
                 <div>
                     <label for="btn-add-img" class="form-label">Upload</label>
@@ -113,7 +117,8 @@
             </form>
 
             <footer class="modal-action_form-footer">
-                <p style="margin-bottom: 6px;">Need <a href="#">help?</a></p>
+                <a href="/staff/trainee-accounts" class="cancel">Cancel</a>
+                Need <a href="#">help?</a>
             </footer>
         </div>
     </div>
