--- a/src/views/seeall/index.hbs
+++ b/src/views/seeall/index.hbs
@@ -18,10 +18,12 @@
             <thead class="table-light">
                 <tr style="font-size: 18px; text-align: center;">
                     <th scope="col">#</th>
-                    {{!-- <th scope="col">Code</th> --}}
-                    <th scope="col">Course Category</th>
+                    <th scope="col">Code</th>
+                    {{!-- <th scope="col">Course Category</th> --}}
                     <th scope="col">Name</th>
                     <th scope="col">Trainer</th>
+                    <th scope="col">createAt</th>
+                    <th scope="col">updateAt</th>
                     <th scope="col">Total</th>
                     <th scope="col"><i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span></th>
                 </tr>
@@ -30,10 +32,12 @@
                 {{#each data}}
                 <tr style="font-size: 18px; text-align: center;">
                     <th scope="row">{{@index}}</th>
-                    {{!-- <td>{{this.code}}</td> --}}
-                    <td>{{this.coursecategory}}</td>
+                    <td>{{this.code}}</td>
+                    {{!-- <td>{{this.coursecategory}}</td> --}}
                     <td>{{this.name}}</td>
                     <td>{{this.trainer}}</td>
+                    <td>{{this.createAt}}</td>
+                    <td>{{this.updateAt}}</td>
                     <td>{{this.total}}</td>
                     <td>
                         <div class="btn-group" style="z-index: 0;" role="group" aria-label="Basic mixed styles example">
@@ -43,7 +47,9 @@
                             <a href="/seeall/delete?id={{this._id}}" class="btn btn-danger" style="border-radius: unset;">
                                 <i class="bi bi-x-lg"></i><span class=" fs-6" style="margin-left: 5px;">Delete</span>
                             </a>
-
+                            <a href="/seeall/view?id={{this._id}}" class="btn btn-warning" style="border-radius: unset;">
+                                <i class="bi bi-binoculars"></i><span class=" fs-6" style="margin-left: 5px;">View</span>
+                            </a>
                         </div>    
                     </td>
                 </tr>
@@ -62,14 +68,14 @@
 
             {{!-- block of code for add new course --}}
             <form class="modal-action_form-body" method="POST" action="/seeall/store">
+              <div class="form-group">
+                    <label for="codeCourse">Code</label>
+                    <input type="text" class="form-control" id="codeCourse" name="code" placeholder="Code of Course..." required>
+                </div>
                 {{!-- <div class="form-group">
-                    <label for="courseCode">Code</label>
-                    <input type="text" class="form-control" id="courseCode" name="coursecode" placeholder="Course Code..." required>
-                </div> --}}
-                <div class="form-group">
                     <label for="courseCategory">Course Category</label>
                     <input type="text" class="form-control" id="courseCategory" name="coursecategory" placeholder="Course Category..." required>
-                </div>
+                </div> --}}
                 <div class="form-group">
                     <label for="categoryName">Name</label>
                     <input type="text" class="form-control" id="categoryName" name="name" placeholder="Course Name..." required>
@@ -77,6 +83,14 @@
                 <div class="form-group">
                     <label for="courseTrainer">Trainer</label>
                     <input class="form-control" id="courseTrainer" name="trainer" placeholder="Course Trainer..." required>
+                </div>
+                <div class="form-group">
+                    <label for="create">CreateAt</label>
+                    <input type="date" class="form-control" id="create" name="createAt" placeholder="Update At..." required>
+                </div>
+                <div class="form-group">
+                    <label for="update">UpdateAt</label>
+                    <input type="date" class="form-control" id="update" name="updateAt" placeholder="Update At..." required>
                 </div>
                 <div class="form-group">
                     <label for="courseTrainer">Total</label>
