--- a/src/views/categories/edit.hbs
+++ b/src/views/categories/edit.hbs
@@ -1,32 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 {{> head}}
+<style>
+    main {
+        background-color: rgb(238, 238, 238);
+        padding: 0 14%;
+        min-height: 100vh;
+        overflow: hidden;
+    }
+    .editCourse-container {
+        background-color: white;
+        box-shadow: 0 8px 10px 6px rgb(228, 228, 228);
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        min-width: 500px;
+    }
+    label {
+        cursor: pointer;
+        color: rgb(44, 44, 44);
+        font-weight: 500;
+    }
+</style>
 <body>
-    {{> staffLayout}}
-    <main class="content-detail" id="common_content-area">
-        <a href="/categories" type="button" class="btn btn-link fs-5">
-            <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
-        </a>
-        <form class="row g-3 mt-4" method="POST" action="/categories/update/?id={{data._id}}">
-            <div class="col-md-6">
+    <main>
+        <div class="editCourse-container">
+            <div class="text-center" style="border-bottom: 1px solid rgb(192, 192, 192);">
+                <img src="/images/header/logo.png" alt="" width="220px">
+            </div>
+            <a href="/categories" type="button" class="btn btn-link fs-5">
+                <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
+            </a>
+            
+            <div style="width: 50%, min-width: 475px; padding: 0px 400px;">
+            <form class="row g-3" method="POST" action="/categories/update/?id={{data._id}}">
+            <div class="mt-4">
                 <label for="name">Category Name</label>
                 <input type="text" class="form-control" value="{{data.name}}" id="name" name="name" placeholder="Name of Category..." required>
             </div>
-            <div class="col-md-6">
+            <div class="mt-4">
                 <label for="TotalCourse">Total Course</label>
                 <input type="number" class="form-control"  value="{{data.total}}" id="totalCourse" name="total"  placeholder="Total of Course..." required>
             </div>
-            <div class="col-md-6">
+            <div class="mt-4">
                     <label for="description">Category Description</label>
                     <textarea class="form-control" id="description" name="description" placeholder="Name of Category..." required>{{data.description}}</textarea>
             </div>
-            <div class="col-12 mt-5" style= "text-align: center">
+            <div class="col-12 mt-4" style= "text-align: center">
                 <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
                     <i class="bi bi-check2 fs-5"></i>
                 </button>
             </div>
-        </form>
+        </form> 
     </main>
-{{> bottom}}
 </body>
 </html>
+            
+
+    
