--- a/src/views/courses/index.hbs
+++ b/src/views/courses/index.hbs
@@ -18,7 +18,7 @@
                 <tr style="font-size: 18px; text-align: center;">
                     <th scope="col">#</th>
                     <th scope="col">Code</th>
-                    <th scope="col">Course Name</th>
+                    <th scope="col">Name</th>
                     <th scope="col">Category Name</th>
                     <th scope="col">Description</th>
                     <th scope="col">Session</th>
@@ -48,8 +48,15 @@
                             </button>
                             <button type="button" class="btn btn-danger">
                                 <i class="bi bi-x-lg"></i>
-                                <a class ="underline-white" href="/courses/delete/?id={{this._id}}">
+                                <a class ="underline-white" href="/courses/delete/?id={{this._id}}", onclick="return conFirm_Delete()">
                                     <span class=" fs-6" style="margin-left: auto;">Delete</span>
+                                    <script>
+                                        function conFirm_Delete(){
+                                        var result = confirm("Are you sure you want to delete this course?")
+                                        if(result==true)  return true;
+                                        else return false
+                                        }
+                                    </script>
                                 </a>
                             </button>
                         </div>
@@ -91,10 +98,6 @@
                     <label for="courseDescription">Course Description</label>
                     <textarea class="form-control" id="courseDescription" name="description" placeholder="Course Description..." required></textarea>
                 </div>
-                {{!-- <div class="form-group">
-                    <label for="session">Session</label>
-                    <input type="number" class="form-control" id="session" name="session" placeholder="Session of Course..." required>
-                </div> --}}
                 <div class="form-group">
                     <label for="create">CreateAt</label>
                     <input type="date" class="form-control" id="create" name="createAt" placeholder="Update At..." required>
@@ -103,7 +106,7 @@
                     <label for="update">UpdateAt</label>
                     <input type="date" class="form-control" id="update" name="updateAt" placeholder="Update At..." required>
                 </div>
-                  <div class="form-group">
+                <div class="form-group">
                     <label for="session">Session</label>
                     <input type="number" class="form-control" id="session" name="session" placeholder="Session of Course..." required>
                 </div>
